Fix dark mode button text color

--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -23,7 +23,7 @@ $body-background-color: $darkest !default;
 $body-text-color: $lightest !default;
 
 $button-background-color: $primary !default;
-$button-text-color: $lightest !default;
+$button-text-color: if($dark-mode, $darkest, $lightest) !default;
 $button-background-color-hover: scale-color($button-background-color, $lightness: -10% * $multiplier) !default;
 
 $button-danger-background-color: $red !default;
